--- a/client/package.json
+++ b/client/package.json
@@ -33,9 +33,11 @@
     "react-sweet-progress": "^1.1.2",
     "react-thunk": "^1.0.0",
     "react-toastify": "^6.0.9",
+    "react-toggle-component": "^3.0.8",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
