--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "multer-gridfs-storage": "^4.2.0"
+    "multer-gridfs-storage": "^4.2.0",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
