--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "gridfs-stream": "^1.1.1",
+    "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
     "mongoose-unique-validator": "^2.0.3",
