--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
+    "react-scroll": "^1.8.1",
     "react-scroll-up": "^1.3.5",
     "react-sweet-progress": "^1.1.2",
     "react-thunk": "^1.0.0",
