--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^3.0.0",
     "material-ui-image": "^3.3.0",
     "moment": "^2.29.1",
+    "pusher-js": "^7.0.2",
     "react": "^16.13.1",
     "react-audio-player": "^0.14.0",
     "react-copy-to-clipboard": "^5.0.2",
