--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
     "node-fetch": "^2.6.1",
+    "pusher": "^4.0.2",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
